Update 'rzmdiaxdi-java-quarkus' component image to: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-71e4b111ec.w2j2.p3.openshiftapps.com/rhtap/rhtap-qe:6b22662379b332fd79f6feb15cd295680bb5b71d@sha256:7f8a5978f156fde309f576319a56937c35d9e5da803bdaa0e8b2b162f120c291

--- a/components/rzmdiaxdi-java-quarkus/overlays/development/deployment-patch.yaml
+++ b/components/rzmdiaxdi-java-quarkus/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: rzmdiaxdi-java-quarkus
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-71e4b111ec.w2j2.p3.openshiftapps.com/rhtap/rhtap-qe:6b22662379b332fd79f6feb15cd295680bb5b71d@sha256:7f8a5978f156fde309f576319a56937c35d9e5da803bdaa0e8b2b162f120c291
+          name: container-image
